<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/demo"
        android:title="Calculator Demo" />

    <group android:checkableBehavior="single">
        <item android:title="Android Basics">
            <menu>
                <item
                    android:id="@+id/activity"
                    android:title="@string/activity_name" />
                <item
                    android:id="@+id/service"
                    android:title="@string/service_name" />
                <item
                    android:id="@+id/broadcast"
                    android:title="@string/broadcast_name" />
                <item
                    android:id="@+id/fragment"
                    android:title="@string/fragment_name" />
                <item
                    android:id="@+id/uiControl"
                    android:title="@string/uiControl_name" />
                <item
                    android:id="@+id/event"
                    android:title="@string/event_name" />
                <item
                    android:id="@+id/http"
                    android:title="@string/HTTP_name" />
            </menu>
        </item>
    </group>
</menu>
